// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collection.fetch should be fetched a Model By Id/Ids 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "home5": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "referenceDef": false,
      },
      "isAuthorized": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "permissions": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "staff": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Staff",
          "type": 0,
        },
      },
    },
    "id": -1,
    "type": "organization.Staff.Me",
  },
  "home5": true,
  "id": -1,
  "isAuthorized": true,
  "permissions": Array [
    "SYS_ADMIN",
  ],
  "staff": Object {
    "id": "XRA9koBTaA0000:gongyanyu",
    "type": "organization.Staff",
  },
}
`;

exports[`collection.fetch should be fetched a Model By Id/Ids 2`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "active": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "avatar": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "cellphone": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporation": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporationId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "createTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "defaultDepartment": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "departments": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "email": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "external": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "nameSpell": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "note": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "order": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "roles": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "updateTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "userId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "version": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "XRA9koBTaA0000:gongyanyu",
    "type": "organization.Staff",
  },
  "active": true,
  "avatar": "",
  "cellphone": null,
  "code": "123321",
  "corporation": undefined,
  "corporationId": "XRA9koBTaA0000",
  "createTime": 1561368150495,
  "defaultDepartment": Object {
    "id": "6Rk9l1WYNM0400:50128173",
    "type": "organization.Department",
  },
  "departments": Array [
    Object {
      "id": "6Rk9l1WYNM0400:50128173",
      "type": "organization.Department",
    },
  ],
  "email": null,
  "external": false,
  "id": "XRA9koBTaA0000:gongyanyu",
  "name": "龚彥宇",
  "nameSpell": "GONGYANYU",
  "note": null,
  "order": Object {
    "XRA9koBTaA0000:19031410": "9043357214046142247",
  },
  "roles": undefined,
  "updateTime": 1574093411607,
  "userId": "tLwu5tpsk7etQAENLoON0giEiE",
  "version": 14,
}
`;

exports[`collection.fetch should be fetched all Refs Models fetchModelRefs 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "home5": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "referenceDef": false,
      },
      "isAuthorized": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "permissions": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "staff": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Staff",
          "type": 0,
        },
      },
    },
    "id": -2,
    "type": "organization.Staff.Me",
  },
  "home5": true,
  "id": -1,
  "isAuthorized": true,
  "permissions": Array [
    "SYS_ADMIN",
  ],
  "staff": Object {
    "id": "XRA9koBTaA0000:gongyanyu",
    "type": "organization.Staff",
  },
}
`;

exports[`collection.fetch should be fetched all Refs Models fetchModelRefs 2`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "active": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "avatar": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "cellphone": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporation": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporationId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "createTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "defaultDepartment": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "departments": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "email": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "external": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "nameSpell": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "note": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "order": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "roles": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "updateTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "userId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "version": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "XRA9koBTaA0000:gongyanyu",
    "type": "organization.Staff",
  },
  "active": true,
  "avatar": "",
  "cellphone": null,
  "code": "123321",
  "corporation": undefined,
  "corporationId": "XRA9koBTaA0000",
  "createTime": 1561368150495,
  "defaultDepartment": Object {
    "id": "6Rk9l1WYNM0400:50128173",
    "type": "organization.Department",
  },
  "departments": Array [
    Object {
      "id": "6Rk9l1WYNM0400:50128173",
      "type": "organization.Department",
    },
  ],
  "email": null,
  "external": false,
  "id": "XRA9koBTaA0000:gongyanyu",
  "name": "龚彥宇",
  "nameSpell": "GONGYANYU",
  "note": null,
  "order": Object {
    "XRA9koBTaA0000:19031410": "9043357214046142247",
  },
  "roles": undefined,
  "updateTime": 1574093411607,
  "userId": "tLwu5tpsk7etQAENLoON0giEiE",
  "version": 14,
}
`;
